refactor: key agent tool selection by id